# anypay-legend

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/attestation/attestation/public-key/: route.ts
app/api/attestation/health/: route.ts
app/api/attestation/webhook/tlsn-verifier/: route.ts
app/api/relayer/tick/: route.ts
app/api/tlsn-demo/proof-source/: route.ts
app/buy/: page.tsx
app/buy/intents/[intentId]/: page.tsx
app/dashboard/: page.tsx
app/sell/: page.tsx
app/tlsn-demo/payment/: page.tsx
apps/web/: README.md  package-lock.json  package.json  vite.config.ts
apps/web-next/app/: layout.tsx  page.tsx
apps/web-next/app/buy/: page.tsx
apps/web-next/app/sell/: page.tsx
apps/web-next/components/: Navbar.tsx  PrivyNearConnector.tsx  Providers.tsx  SellFlow.tsx
apps/web-next/hooks/: useNear.ts
apps/web-next/lib/: contracts.ts
apps/web-next/lib/services/: asset-map.ts  near-network.ts  near.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: types.ts
apps/web/src/lib/auth/: PrivyBridge.tsx
apps/web/src/lib/services/: contract.ts  (+2 more)
apps/web/src/routes/: +layout.svelte  +page.svelte
components/: BuyFlow.tsx  BuyWidget.tsx  Navbar.tsx  PrivyNearConnector.tsx  SellFlow.tsx  SellWidget.tsx  TLSNNotarization.tsx
contracts/near/: Cargo.toml  deploy-and-init.js  deploy-v2.js  deploy.sh  deploy_final.sh  init-contract.js  migrate-v2.js  migrate-v3.js  package-lock.json  package.json  set-attestation-key.js  test-flow.js  testnet-integration.js
contracts/near/relayer/: config.ts  index.ts  intents-client.ts  near-client.ts  runner.ts  tsconfig.json
contracts/near/src/: lib.rs  lib.rs.bak
contracts/near/src/chains/: bitcoin.rs  ethereum.rs
contracts/near/tests/: sim.rs
lib/server/: attestation-service.ts
lib/services/: intents-pricing.ts  near-network.ts  near.ts  payment-method.ts  privy-wallet.ts  tlsn-demo.ts  tlsn-extension.ts
public/plugins/: wise.js
services/attestation-backend/: Cargo.toml
services/attestation-backend/src/: attestation.rs  main.rs  prover.rs  types.rs  verifier.rs  ws.rs
tests/e2e/: smoke.spec.ts
(+40 files in other folders)
