[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tlsn = { path = "../tlsn-core/crates/tlsn" } # Removed features=["full"] as it might not be valid
tlsn-core = { path = "../tlsn-core/crates/core" }
tlsn-server-fixture = { path = "../tlsn-core/crates/server-fixture/server" }
tlsn-server-fixture-certs = { path = "../tlsn-core/crates/server-fixture/certs" }

# Common
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
hyper = { version = "1.0", features = ["full", "client", "http1"] } # Added features from examples Cargo.toml
hyper-util = { version = "0.1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1.0"
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
bincode = "1.3"
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "adfc5ba" }
sha2 = "0.10"
ed25519-dalek = "2.1"

# Noir
noir = { git = "https://github.com/zkmopro/noir-rs", tag = "v1.0.0-beta.8", features = ["barretenberg"] }
